--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
+Temp/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -25,8 +26,7 @@ ExportedObj/
 *.opendb
 
 # Unity3D generated meta files
-*.pidb.meta
-*.pdb.meta
+*.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
