--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-Temp/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -26,7 +25,8 @@ ExportedObj/
 *.opendb
 
 # Unity3D generated meta files
-*.meta
+*.pidb.meta
+*.pdb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
